--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <div id="popup" class="ol-popup">
   <div id="popup-content"></div>
 </div>
+<hr />
+<p>DATA: <a href="https://ja.wikipedia.org/wiki/%E3%83%A1%E3%82%A4%E3%83%B3%E3%83%9A%E3%83%BC%E3%82%B8" target="_blank">ウィキペディア</a></p>
+<p>src: <a href="https://github.com/EiichiMiyagawa/old-fukui-railroad-map" target="_blank">https://github.com/EiichiMiyagawa/old-fukui-railroad-map</a></p>
 
 <script type="module">
   import { OLMap } from "https://eiichimiyagawa.github.io/OLMap/v1/OLMap.js";
